# wokashi

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
tests/: test_wokashi.py
wokashi/: __init__.py  soup.py  tag.py  wokashi.py
