[tool.poetry]
name = "wokashi"
version = "0.1.0"
description = ""
authors = ["dynamonda <v7gj9kk@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
